# blog-writing-agent

./: .env.example  .gitignore  README.md  pyproject.toml
output/: blog.md  latest_ai_model_releases_this_week.md
src/blog_agent/: __init__.py  __main__.py  pipeline.py
src/blog_agent/api/: main.py  models.py
src/blog_agent/api/routes/: __init__.py  blogs.py  health.py
src/blog_agent/core/: __init__.py  config.py  exceptions.py  logging.py
src/blog_agent/graph/: __init__.py  builder.py  reducer_graph.py
src/blog_agent/graph/nodes/: __init__.py  merge.py  orchestrator.py  reducer.py  research.py  router.py  worker.py
src/blog_agent/llm/: __init__.py  provider.py
src/blog_agent/prompts/: __init__.py  images.py  orchestrator.py  research.py  router.py  worker.py
src/blog_agent/schemas/: __init__.py  blog.py  image.py  research.py  state.py
src/blog_agent/services/: __init__.py  image_generation.py  search.py  storage.py
