[project]
name = "blog-writing-agent"
version = "0.1.0"
description = "Multi-agent technical blog writer built on LangGraph + FastAPI."
readme = "README.md"
authors = [
    { name = "Ritu Raj Sharma", email = "rajcreo6908@gmail.com" }
]
keywords = ["langgraph", "agents", "llm", "fastapi", "content-generation"]

requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
blog-agent = "blog_agent.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "blog_agent"
