[project]
name = "blog-writing-agent"
version = "0.1.0"
description = "Multi-agent technical blog writer built on LangGraph + FastAPI."
readme = "README.md"
authors = [
    { name = "Ritu Raj Sharma", email = "rajcreo6908@gmail.com" }
]
keywords = ["langgraph", "agents", "llm", "fastapi", "content-generation"]

requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "grandalf>=0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "tavily-python>=0.7.26",
]

[project.scripts]
blog-agent = "blog_agent.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "blog_agent"
