[project]
name = "blog-writing-agent"
version = "0.1.0"
description = "Multi-agent technical blog writer built on LangGraph + FastAPI."
readme = "README.md"
authors = [
    { name = "Ritu Raj Sharma", email = "rajcreo6908@gmail.com" }
]
keywords = ["langgraph", "agents", "llm", "fastapi", "content-generation"]

requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "grandalf>=0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
blog-agent = "blog_agent.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "blog_agent"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
